<resources>
    <string name="app_name">Apple Top 10</string>
    <string name="mnuFreeTxt">Free Apps</string>
    <string name="mnuPaidTxt">Paid Apps</string>
    <string name="mnuSongs">Songs</string>
    <string name="mnuNewApp">Just Added Apps</string>
    <string name="mnuTop10Txt">Top 10</string>
    <string name="mnuTop25Txt">Top 25</string>
    <string name="mnuRefreshTxt">Refresh</string>
</resources>
