<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnuFree"
        android:title="@string/mnuFreeTxt" />
    <item
        android:id="@+id/mnuPaid"
        android:title="@string/mnuPaidTxt" />
    <item
        android:id="@+id/mnuSongs"
        android:title="@string/mnuSongs" />
    <group
        android:id="@+id/mnuGrpLimit"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mnuTop10"
            android:checked="true"
            android:title="@string/mnuTop10Txt" />
        <item
            android:id="@+id/mnuTop25"
            android:title="@string/mnuTop25Txt" />
    </group>
    <item
        android:id="@+id/mnuRefresh"
        android:title="@string/mnuRefreshTxt" />
</menu>